--- a/src/Pokeworld.Pokedex.Api/appsettings.Development.json
+++ b/src/Pokeworld.Pokedex.Api/appsettings.Development.json
@@ -5,5 +5,9 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+
+  "Services": {
+    "PokeApiUrl": "https://pokeapi.co/api/v2/pokemon"
+  } 
 }
