Adding service tests

--- a/src/Pokeworld.Pokedex.Api/appsettings.json
+++ b/src/Pokeworld.Pokedex.Api/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Services": {
+    "PokeApiUrl": "https://pokeapi.co/api/v2/pokemon"
+  }
 }
