--- a/tests/Pokeworld.Pokedex.ServiceTests/Pokeworld.Pokedex.ServiceTests.csproj
+++ b/tests/Pokeworld.Pokedex.ServiceTests/Pokeworld.Pokedex.ServiceTests.csproj
@@ -9,4 +9,11 @@
     <ProjectReference Include="..\..\src\Pokeworld.Pokedex.Contracts\Pokeworld.Pokedex.Contracts.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="5.10.3" />
+    <PackageReference Include="LightBDD.XUnit2" Version="3.3.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="3.1.12" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.1" />
+  </ItemGroup>
+
 </Project>
