Adding Controller method, contract and stub handler

--- a/src/Pokeworld.Pokedex.Api/appsettings.json
+++ b/src/Pokeworld.Pokedex.Api/appsettings.json
@@ -8,6 +8,9 @@
   },
   "AllowedHosts": "*",
   "Services": {
-    "PokeApiUrl": "https://pokeapi.co/api/v2/pokemon"
+    "PokeApiUrl": "https://pokeapi.co/api/v2/pokemon",
+    "FunTranslationApiUrl": "https://api.funtranslations.com/translate",
+    "ShakespearePath": "shakespeare.json",
+    "YodaPath": "yoda.json"
   }
 }
