Added FunTranslation Client Implementation logic Added endpoint implementation logic Added Integration tests Added service tests

--- a/src/Pokeworld.Pokedex.Clients/Pokeworld.Pokedex.Clients.csproj
+++ b/src/Pokeworld.Pokedex.Clients/Pokeworld.Pokedex.Clients.csproj
@@ -10,6 +10,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Pokeworld.Pokedex.Contracts\Pokeworld.Pokedex.Contracts.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="Microsoft.Extensions.DependencyInjection.Abstractions">
       <HintPath>..\..\..\..\..\..\..\Program Files\dotnet\packs\Microsoft.AspNetCore.App.Ref\3.1.8\ref\netcoreapp3.1\Microsoft.Extensions.DependencyInjection.Abstractions.dll</HintPath>
     </Reference>
